--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
     </head>
     <body>
         <header class="header">
-            Some text ...
+            <div class="logo-box">
+                <img src="img/logo-white.png" alt="Logo" class="logo" />
+            </div>
+            <div class="text-box">
+                <h1 class="header-primary">
+                    <span class="header-primary-main">Outdoors</span>
+                    <span class="header-primary-sub">is where life happen</span>
+    
+                </h1>    
+            </div>
         </header>
         
     </body>
